# synth-app

./: .gitignore  docker-compose.yml  package.json  webpack.config.js
src/: index.ts  styles.css  synth-controller.ts  synth-view.ts  synth.ts
webapi/: Dockerfile  pyproject.toml
webapi/src/: crud.py  database.py  main.py  models.py  schemas.py
webui/: .prettierrc  Dockerfile  package.json  webpack.common.js
webui/src/: App.js  App.tsx  Delay.tsx  Envelope.js  Filter.js  Filter.tsx  Keyboard.js  Oscillator.tsx  Param.js  PresetSelector.tsx  api.ts  constants.ts  index.html  index.ts  styles.css  synth-controller.ts  synth-view.ts  types.ts  utilities.ts
webui/src/views/: filter-view.ts  master-control-view.ts  oscillator-view.ts  synth-view.ts
